--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0.4rem 2rem;
+    margin: 0 auto;
     max-width: var(--content-width);
   }
 }
