--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -7,6 +7,7 @@
   &__content {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 0.4rem 2rem;
     margin: 0 auto;
     max-width: var(--content-width);
