styles: add colors of pokemon card

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,10 @@
   --bg-header: #0b92b2;
   --bg-body: #2a2426;
   --color: #dedede;
+  --bg-card-pokemon: #111717;
+  --bg-card-pokemon-name: #af383a;
+  --border-card-pokemon-name: #b89072;
+  --radius-6: 0.375rem;
 }
 
 *,
@@ -29,6 +33,7 @@ body {
 
 img,
 picture,
+figure,
 svg {
   display: block;
   max-width: 100%;
@@ -65,5 +70,8 @@ ul {
     --bg-header: #a82a2d;
     --bg-body: #fcfbff;
     --color: #232323;
+    --bg-card-pokemon: #d5acca;
+    --bg-card-pokemon-name: #f6ddc9;
+    --border-card-pokemon-name: #74a2c6;
   }
 }
