--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,3 +1,4 @@
 <div class="bg-main"></div>
 <h1 class="title">Adopt a Pokémon</h1>
 <div style="font-size: 4rem; margin-top: 2rem;">Todo: introdución</div>
+<app-view-pokemons />
