--- a/src/app/modules/home/components/pokemon-item/pokemon-item.component.html
+++ b/src/app/modules/home/components/pokemon-item/pokemon-item.component.html
@@ -3,7 +3,7 @@
   <figure class="pokemonItem__content" (mouseenter)="addAnimation()">
     <img class="pokemonItem__img"
       [src]="pokemon.sprites.other['official-artwork'].front_default || pokemon.sprites.front_default"
-      [alt]="pokemon.name">
+      [alt]="pokemon.name" loading="lazy">
     <figcaption class="pokemonItem__name">
       {{pokemon.name}}
     </figcaption>
