--- a/src/app/modules/home/components/pokemon-item/pokemon-item.component.scss
+++ b/src/app/modules/home/components/pokemon-item/pokemon-item.component.scss
@@ -4,6 +4,7 @@
   list-style-type: none;
   border-radius: var(--radius-6);
   overflow: hidden;
+  width: 12.5rem;
 
   &__content {
     margin: 0;
