--- a/src/app/modules/home/components/view-pokemons/view-pokemons.component.scss
+++ b/src/app/modules/home/components/view-pokemons/view-pokemons.component.scss
@@ -4,14 +4,20 @@
   background-color: var(--bg-body);
 }
 
+.section__title {
+  margin-top: 0;
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .errorMessage {
   font-size: 3rem;
   line-height: 1;
 }
 
 .pokemonList {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(9.375rem, 12.5rem));
-  gap: 4rem;
-  place-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem 4rem;
+  justify-content: center;
 }
