--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -2,6 +2,7 @@
   position: fixed;
   top: 0;
   max-width: var(--content-width);
+  max-height: 100vh;
   width: 100%;
   height: 100%;
   background: no-repeat top center / cover url("/assets/images/intro.jpg");
