--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 :root {
   --content-width: 87.5rem;
+  --size-logo: 2rem;
+  --page-padding-x: 2rem;
+  --page-padding-y: 0.4rem;
   --bg-header: #0b92b2;
   --bg-body: #2a2426;
   --color: #dedede;
@@ -7,6 +10,8 @@
   --bg-card-pokemon-name: #af383a;
   --border-card-pokemon-name: #b89072;
   --radius-6: 0.375rem;
+  --radius-8: 0.5rem;
+  --radius-10: 0.625rem;
 }
 
 *,
@@ -59,9 +64,6 @@ ul {
 }
 
 #root {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
   isolation: isolate;
 }
 
