--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,10 @@
+:host ::ng-deep app-pokemon {
+  min-height: inherit;
+}
+
 .mainContent {
-  flex-grow: 1;
-  margin: auto auto 0;
+  margin: 0 auto;
   max-width: var(--content-width);
   width: 100%;
-  max-height: 100vh;
+  min-height: calc(100vh - var(--size-logo) - 2 * var(--page-padding-y));
 }
