--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -3,20 +3,19 @@
   top: 0;
   background-color: var(--bg-header);
   backdrop-filter: blur(5px);
+  z-index: 1;
 
   &__content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.4rem 2rem;
+    padding: var(--page-padding-y) var(--page-padding-x);
     margin: 0 auto;
     max-width: var(--content-width);
   }
 }
 
 .logo {
-  --size: 2rem;
-
   width: auto;
-  height: var(--size);
+  height: var(--size-logo);
 }
