modify pokemon-item and view-pokemons

--- a/src/app/modules/home/components/view-pokemons/view-pokemons.component.html
+++ b/src/app/modules/home/components/view-pokemons/view-pokemons.component.html
@@ -1,5 +1,8 @@
 <section class="section__pokemons">
+  <!-- @Todo: Mover a #viewPokemons -->
   <h2 class="section__title">These Pokémon want to be your friends</h2>
+  <app-search-pokemon />
+  <!-- */ -->
   <p *ngIf="errorMessage; else viewPokemons" class="errorMessage">
     {{errorMessage}}
   </p>
