add functionality to the pokemon finder

--- a/src/app/modules/home/components/search-pokemon/search-pokemon.component.html
+++ b/src/app/modules/home/components/search-pokemon/search-pokemon.component.html
@@ -1,3 +1,12 @@
-<form>
-  <input class="serchPokemon" type="text" placeholder="Search Eevee" name="namePokemon">
+<form [formGroup]="pokemonForm" (ngSubmit)="onSubmit($event)">
+  <input class="serchPokemon" type="text" placeholder="Search Eevee" id="namePokemon" name="namePokemon"
+    formControlName="namePokemon" [minlength]="minLength">
+  <div class="error" *ngIf="errors">
+    <p *ngIf="errors?.required">Enter the name of the Pokémon, please.</p>
+    <p *ngIf="errors?.minlength">The name must be at least {{this.minLength}}
+    <p *ngIf="errors?.maxlength">The name must be at least {{this.maxLength}}
+      characters.</p>
+    <p *ngIf="errors?.onlyLetters">The name must be at least characters.</p>
+    <p *ngIf="errors?.notExist">The pokémon {{errors.notExist | titlecase}} doesn't exist.</p>
+  </div>
 </form>
