add redirect to home and styles

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,8 @@
 <header class="header">
   <div class="header__content">
-    <img src="/assets/images/logo.png" alt="Adopt Pokémon" class="logo">
+    <a [routerLink]="['/']" aria-label="Ir al inicio">
+      <img src="/assets/images/logo.png" alt="Adopt Pokémon" class="logo">
+    </a>
     <div>
       <span>Change mode y login</span>
     </div>
