--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,9 +1,15 @@
 .header {
   position: sticky;
   top: 0;
-  background-color: var(--bg-header);
+  background-color: var(--bg-header-alpha-50);
   backdrop-filter: blur(5px);
   z-index: 1;
+  view-timeline-name: --float;
+  view-timeline-axis: block;
+  animation-timeline: --float;
+  animation-name: float;
+  animation-range: entry 62.5rem cover 30%;
+  animation-fill-mode: forwards;
 
   &__content {
     display: flex;
@@ -18,4 +24,19 @@
 .logo {
   width: auto;
   height: var(--size-logo);
+}
+
+@keyframes float {
+  from {
+    top: 0;
+  }
+
+  to {
+    top: 3rem;
+    margin: 0 auto;
+    width: 80vw;
+    background-color: var(--bg-header-alpha-80);
+    border-radius: calc(var(--size-logo) / 2 + var(--page-padding-y));
+    border: solid 2px #ffff00;
+  }
 }
