--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -22,10 +22,30 @@
 }
 
 .title {
-  margin-top: 1em;
-  margin-bottom: 0;
+  padding-top: 1em;
+  margin: 0;
   font-size: 4.5rem;
   line-height: 1;
   text-align: center;
   text-shadow: 0 0 5px rgb(0 0 0 / 0.16), 0 0 10px rgb(0 0 0 / 0.24);
+}
+
+.introduction {
+  margin: 4rem auto 10rem 2rem;
+  padding: 1em 1.4em;
+  max-width: 55ch;
+  width: 100%;
+  background-color: rgba(41 36 37 / 0.5);
+  backdrop-filter: blur(5px);
+  border-radius: var(--radius-8);
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+
+  &__paragraph {
+    margin: 0;
+
+    &:first-child {
+      margin-bottom: 0.6em;
+    }
+  }
 }
