add css variable --bg-header

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
   --size-logo: 2rem;
   --page-padding-x: 2rem;
   --page-padding-y: 0.4rem;
+  --bg-header: rgb(11, 147, 177);
   --bg-header-alpha-50: rgba(11, 147, 177, 0.5);
   --bg-header-alpha-80: rgba(11, 147, 177, 0.8);
   --bg-body: #2a2426;
