apply main-container

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,12 +1,16 @@
-<div class="bg-main"></div>
-<h1 class="title">Adopt a Pokémon</h1>
-<section class="introduction">
-  <p class="introduction__paragraph">
-    We are a group of people that rescues, recovers and gives up for adoption Pokémon that have been abandoned or
-    mistreated.
-  </p>
-  <p class="introduction__paragraph">
-    We heal them, give them care and then we look for them to be adopted by wonderful families.
-  </p>
-</section>
-<app-view-pokemons />
+<app-header />
+
+<app-main-container>
+  <div class="bg-main"></div>
+  <h1 class="title">Adopt a Pokémon</h1>
+  <section class="introduction">
+    <p class="introduction__paragraph">
+      We are a group of people that rescues, recovers and gives up for adoption Pokémon that have been abandoned or
+      mistreated.
+    </p>
+    <p class="introduction__paragraph">
+      We heal them, give them care and then we look for them to be adopted by wonderful families.
+    </p>
+  </section>
+  <app-view-pokemons />
+</app-main-container>
