--- a/src/app/modules/pokemon/pokemon.component.html
+++ b/src/app/modules/pokemon/pokemon.component.html
@@ -1,28 +1,32 @@
-<div class="bgPokemon"></div>
-<div class="pokemonContainer">
-  <div class="pokemon">
-    <img class="pokemon__img"
-      [src]="pokemon.sprites.other['official-artwork'].front_default || pokemon.sprites.front_default"
-      [alt]="pokemon.name" loading="eager">
-    <article>
-      <h2 class="pokemon__name">{{pokemon.name}}</h2>
-      <table class="pokemon__data">
-        <tr class="pokemon__data__stat">
-          <td class="pokemon__data__property">Height</td>
-          <td class="pokemon__data__value">{{pokemon.height}}</td>
-        </tr>
-        <tr class="pokemon__data__stat">
-          <td class="pokemon__data__property">Weight</td>
-          <td class="pokemon__data__value">{{pokemon.weight}}</td>
-        </tr>
-        <tr class="pokemon__data__stat">
-          <td class="pokemon__data__property">Types</td>
-          <td class="pokemon__data__value">
-            <span>{{pokemon.types | capitalize | ListForm}}</span>
-          </td>
-        </tr>
-      </table>
-      <a href="#" class="button__adopt">Adopt</a>
-    </article>
+<app-header />
+
+<app-main-container>
+  <div class="bgPokemon"></div>
+  <div class="pokemonContainer">
+    <div class="pokemon">
+      <img class="pokemon__img"
+        [src]="pokemon.sprites.other['official-artwork'].front_default || pokemon.sprites.front_default"
+        [alt]="pokemon.name" loading="eager">
+      <article>
+        <h2 class="pokemon__name">{{pokemon.name}}</h2>
+        <table class="pokemon__data">
+          <tr class="pokemon__data__stat">
+            <td class="pokemon__data__property">Height</td>
+            <td class="pokemon__data__value">{{pokemon.height}}</td>
+          </tr>
+          <tr class="pokemon__data__stat">
+            <td class="pokemon__data__property">Weight</td>
+            <td class="pokemon__data__value">{{pokemon.weight}}</td>
+          </tr>
+          <tr class="pokemon__data__stat">
+            <td class="pokemon__data__property">Types</td>
+            <td class="pokemon__data__value">
+              <span>{{pokemon.types | capitalize | ListForm}}</span>
+            </td>
+          </tr>
+        </table>
+        <a href="#" class="button__adopt">Adopt</a>
+      </article>
+    </div>
   </div>
-</div>
+</app-main-container>
