modify border the color of the header border

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -37,6 +37,6 @@
     width: 80vw;
     background-color: var(--bg-header-alpha-80);
     border-radius: calc(var(--size-logo) / 2 + var(--page-padding-y));
-    border: solid 2px #ffff00;
+    border: solid 2px rgb(207, 201, 16);
   }
 }
