--- a/src/app/modules/home/components/pokemon-item/pokemon-item.component.html
+++ b/src/app/modules/home/components/pokemon-item/pokemon-item.component.html
@@ -1,10 +1,9 @@
-<!-- @Todo: añadir enlace a la página del pokémon -->
 <li class="pokemonItem">
   <a [routerLink]="['/pokemon', pokemon.name]">
     <figure class="pokemonItem__content" (mouseenter)="addAnimation()">
       <img class="pokemonItem__img"
         [src]="pokemon.sprites.other['official-artwork'].front_default || pokemon.sprites.front_default"
-        [alt]="pokemon.name" loading="lazy">
+        [alt]="pokemon.name">
       <figcaption class="pokemonItem__name">
         {{pokemon.name}}
       </figcaption>
