--- a/src/app/modules/home/components/pokemon-item/pokemon-item.component.scss
+++ b/src/app/modules/home/components/pokemon-item/pokemon-item.component.scss
@@ -23,6 +23,17 @@
     text-align: center;
   }
 
+  &__img {
+    height: 12.5rem;
+    width: 12.5rem;
+    background-image: radial-gradient(
+      circle at center,
+      rgb(115 32 240 / 35%),
+      rgb(115 32 240 / 35%) 5%,
+      transparent 70%
+    );
+  }
+
   &__hearth {
     --size-hearth: 5rem;
 
