add global color

--- a/src/app/modules/home/components/panel-pagination/panel-pagination.component.scss
+++ b/src/app/modules/home/components/panel-pagination/panel-pagination.component.scss
@@ -14,7 +14,7 @@
     background-color: #18447d;
     color: #e2e2e2;
     font-weight: 600;
-    border: solid 2px var(--border-color-1);
+    border: solid 2px var(--border-color-button-1);
     border-radius: var(--radius-6);
     text-align: center;
   }
