--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@
   --bg-card-pokemon: #111717;
   --bg-card-pokemon-name: #af383a;
   --border-card-pokemon-name: #b89072;
+  --border-color-button-1: #316bb3;
   --radius-6: 0.375rem;
   --radius-8: 0.5rem;
   --radius-10: 0.625rem;
