--- a/src/app/modules/home/components/pokemon-item/pokemon-item.component.html
+++ b/src/app/modules/home/components/pokemon-item/pokemon-item.component.html
@@ -1,5 +1,5 @@
 <li class="pokemonItem">
-  <a [routerLink]="['/pokemon', pokemon.name]">
+  <a [routerLink]="['/pokemon', pokemon.name]" (click)="savePokemonData()">
     <figure class="pokemonItem__content" (mouseenter)="addAnimation()">
       <img class="pokemonItem__img"
         [src]="pokemon.sprites.other['official-artwork'].front_default || pokemon.sprites.front_default"
