add functionality to add pokemon to the adoption list

--- a/src/app/modules/pokemon/pokemon.component.html
+++ b/src/app/modules/pokemon/pokemon.component.html
@@ -25,7 +25,7 @@
             </td>
           </tr>
         </table>
-        <a href="#" class="button__adopt">Adopt</a>
+        <button (click)="addPokemonToAdoptionList()" class="button__adopt">Adopt</button>
       </article>
     </div>
   </div>
