add button to return to home

--- a/src/app/modules/registers/signup/signup.component.html
+++ b/src/app/modules/registers/signup/signup.component.html
@@ -1,7 +1,7 @@
 <main class="mainContainer">
   <section class="wrapperForm">
-    <a [routerLink]="['../']" class="">
-      <span></span>
+    <a [routerLink]="['../']" class="closeBtn">
+      <span class="closeBtn__cross"></span>
     </a>
     <form [formGroup]="userForm" class="form">
       <label for="username" class="form__label">Add your email</label>
