--- a/src/app/modules/registers/signup/signup.component.scss
+++ b/src/app/modules/registers/signup/signup.component.scss
@@ -17,8 +17,8 @@
   display: flex;
   flex-direction: column;
   padding: 2rem;
-  max-height: 50rem;
-  height: 100%;
+  max-height: 70rem;
+  width: 24rem;
 
   &__label {
     padding-bottom: 0.4em;
@@ -86,5 +86,21 @@
       border-radius: inherit;
       transform: rotate(90deg);
     }
+  }
+}
+
+.errors {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 0.5rem;
+  padding: 1rem;
+  background-color: rgb(0 0 0 / 0.85);
+  font-weight: 600;
+  border-radius: var(--radius-6);
+
+  & > p {
+    margin: 0;
+    word-wrap: break-word;
   }
 }
