add login component

--- a/src/app/modules/registers/login/login.component.html
+++ b/src/app/modules/registers/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login works!</p>
+<main class="mainContainer">
+  <section class="wrapperForm">
+    <a routerLink="/" class="closeBtn">
+      <span class="closeBtn__cross"></span>
+    </a>
+    <form [formGroup]="userForm" class="form" (ngSubmit)="onSubmit($event)">
+      <label for="username" class="form__label">Your email</label>
+      <input formControlName="email" type="text" name="email" class="form__input" required>
+      <label for="password" class="form__label">Your password</label>
+      <input formControlName="password" type="password" name="password" [minLength]="minlengthPassword"
+        class="form__input" required>
+      <button class="form__button" type="submit">Continue</button>
+      <aside class="errors" *ngIf="errors.email || errors.password || errors.isInvalidConnection">
+        <p *ngIf="errors.email?.required">It's necessary to enter the email.</p>
+        <p *ngIf="errors.password?.required">It's necessary to enter the password.</p>
+        <p *ngIf="errors.email?.email">The entered email is not valid.</p>
+        <p *ngIf="errors.password?.minlength">The entered password is not valid; it must have a minimum of
+          {{minlengthPassword}}
+          characters.
+        </p>
+        <p *ngIf="errors.isInvalidConnection !== null && errors.isInvalidConnection">
+          The email or password is not valid.
+        </p>
+      </aside>
+    </form>
+  </section>
+</main>
