--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -14,7 +14,9 @@
         </ng-template>
       </nav>
       <a [routerLink]="['/']" aria-label="View adoption list" class="amountPokemons">
-        <img class="amountPokemons__img" src="/assets/images/amountPokemon.png" alt="Number of pokemons to adopt">
+        <div class="amountPokemons__containerImg">
+          <img class="amountPokemons__img" src="/assets/images/amountPokemon.png" alt="Number of pokemons to adopt">
+        </div>
         <span class="amountPokemons__amount">{{quantity$ | async}}</span>
       </a>
     </div>
