--- a/src/app/modules/registers/signup/signup.component.html
+++ b/src/app/modules/registers/signup/signup.component.html
@@ -1,6 +1,6 @@
 <main class="mainContainer">
   <section class="wrapperForm">
-    <a routerLink="/" class="closeBtn">
+    <a routerLink="" class="closeBtn">
       <span class="closeBtn__cross"></span>
     </a>
     <form [formGroup]="userForm" class="form" (ngSubmit)="onSubmit($event)">
