--- a/src/app/modules/pokemon/pokemon.component.html
+++ b/src/app/modules/pokemon/pokemon.component.html
@@ -8,7 +8,9 @@
         [src]="pokemon.sprites.other['official-artwork'].front_default || pokemon.sprites.front_default"
         [alt]="pokemon.name" loading="eager">
       <article>
-        <h2 class="pokemon__name">{{pokemon.name}}</h2>
+        <header>
+          <h2 class="pokemon__name">{{pokemon.name}}</h2>
+        </header>
         <table class="pokemon__data">
           <tr class="pokemon__data__stat">
             <td class="pokemon__data__property">Height</td>
