--- a/src/app/modules/pokemon/pokemon.component.scss
+++ b/src/app/modules/pokemon/pokemon.component.scss
@@ -27,6 +27,7 @@
   max-width: 21.875rem;
   width: 100%;
   background-color: #2a2426;
+  color: var(--color-white);
   border-radius: var(--radius-8);
 
   &__name {
