change color property of the number of pokemons

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -62,7 +62,7 @@
     position: absolute;
     top: -0.6rem;
     right: -0.6rem;
-    color: #232323;
+    color: inherit;
     font-size: 1.25rem;
   }
 
