--- a/src/app/modules/home/components/search-pokemon/search-pokemon.component.scss
+++ b/src/app/modules/home/components/search-pokemon/search-pokemon.component.scss
@@ -4,14 +4,14 @@
   border-radius: var(--radius-6);
   font-size: 1.125rem;
   line-height: 1.75rem;
-  color: inherit;
+  color: var(--color);
   border: 2px solid var(--bg-header);
   transition-property: background-color, color, font-size, line-height;
   transition-timing-function: linear;
   transition-duration: 99999s;
 
   &::placeholder {
-    color: inherit;
+    color: var(--color);
     opacity: 0.8;
   }
 
