sort header buttons

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -39,6 +39,7 @@
     &__btn {
       padding: 0.2rem 0.6rem;
       background-color: transparent;
+      color: inherit;
       border-width: 0;
       border-radius: var(--radius-10);
 
