--- a/src/app/modules/pokemon/pokemon.component.scss
+++ b/src/app/modules/pokemon/pokemon.component.scss
@@ -24,6 +24,8 @@
 
 .pokemon {
   padding: 1rem 2rem;
+  max-height: 33.125rem;
+  height: 100%;
   max-width: 21.875rem;
   width: 100%;
   background-color: #2a2426;
