modify the maximum height of main container

--- a/src/app/shared/main-container/main-container.component.scss
+++ b/src/app/shared/main-container/main-container.component.scss
@@ -2,5 +2,5 @@
   margin: 0 auto;
   max-width: var(--content-width);
   width: 100%;
-  min-height: calc(100vh - var(--size-logo) - 2 * var(--page-padding-y));
+  min-height: calc(100vh - 3.1331rem);
 }
