--- a/src/app/modules/home/components/view-pokemons/view-pokemons.component.html
+++ b/src/app/modules/home/components/view-pokemons/view-pokemons.component.html
@@ -5,7 +5,7 @@
   <ng-template #viewPokemons>
     <h2 class="section__title">These Pokémon want to be your friends</h2>
     <app-search-pokemon />
-    <app-panel-pagination [links]="navigationButtonLinks" />
+    <app-panel-pagination />
     <app-pokemon-list [pokemons]="pokemons" />
   </ng-template>
 </section>
